--- a/7-guia/7-sol.tex
+++ b/7-guia/7-sol.tex
@@ -11,19 +11,26 @@
 \title{Práctica 7 de álgebra 1} % título
 \author{Comunidad algebraica} % autor
 \date{last update: \today} % Cambiar de ser necesario
-
 \maketitle  % para que aprezca el título en el documento
 
+
+% Notas teóricas correspondiente a esta guía
 \input{./teoria-7/teoria-7.tex}
 
+\newpage % página nueva
+
+%=========================
+% Ejercicios guia
+%=========================
 \subsubsection*{Ejercicios de clase o parciales:}
 
-\newpage
+\newpage % página nueva
 
 
 %=========================
 % Ejercicios guia
 %=========================
+
 \subsubsection*{Ejercicios de la guía:}
 \setcounter{ejercicio}{0} % Reset el counter de \ejercicio
 
