--- a/7-guia/teoria-7/teoria-7.tex
+++ b/7-guia/teoria-7/teoria-7.tex
@@ -46,13 +46,13 @@
 		      \item $\mult{\alpha;f} = m \sisolosi
 			            \llave{rl}{
 				            \mult{\alpha;f}\geq m     &
-				            \llave{c}{
+				            \llaveInv{c}{
 					            f(\alpha) = 0\\
 					            \vdots\\
 					            f^{(m-1)(\alpha) = 0}
 				            }\\
 				            \mult{\alpha;f} = m     &
-				            \llave{c}{
+				            \llaveInv{c}{
 					            f^{m)(\alpha) \distinto 0}
 				            }
 			            }$
