--- a/macros/preamble-general.tex
+++ b/macros/preamble-general.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt,a4paper, spanish]{article}
+\documentclass[12pt, a4paper, spanish]{article}
 % Sacar draft para que aparezcan las imagenes.
 % Opciones: 12pt, 10pt, 11pt, landscape, twocolumn, fleqn, leqno...
 % Opciones de clase: article, report, letter, beamer...
@@ -13,9 +13,7 @@
 \usepackage{amsmath} % Soporte de mathmatics
 \usepackage{amssymb} % fuentes de mathmatics
 \usepackage{array} % Para tablas y eso
-\usepackage{caption} % Configuracion de figuras y tablas
 \usepackage[dvipsnames]{xcolor} % Para colorear el texto: black, blue, brown, cyan, darkgray, gray, green, lightgray, lime, magenta, olive, orange, pink, purple, red, teal, violet, white, yellow.
-\usepackage{graphicx} % Necesario para poner imagenes
 \usepackage{enumitem} % Cambiar labels y más flexibilidad para el enumerate
 \usepackage{multicol} 
 \usepackage{tikz} % para graficar
@@ -26,8 +24,11 @@
 \usepackage{bbding} % símbolos de donde uso FiveStar
 \usepackage{skull} % símbolos de donde uso Skull
 \usepackage{soul} % Para tachar texto en text y math mode
-
 % \usepackage{lipsum} % dummy text
+
+% \usepackage{graphicx} % Necesario para poner imagenes
+% \usepackage{caption} % Configuracion de figuras y tablas
+
 
 % para hacer los graficos tipo grafos
 \usetikzlibrary{shapes,arrows.meta, chains, matrix, calc, trees, positioning, fit}
