--- a/6-sol/6-sol.tex
+++ b/6-sol/6-sol.tex
@@ -228,7 +228,7 @@ $\llave{l}{
 		}
 	}\\
 	\to$
-\boxed{z_k = 2 e^{\th((-3)x^5 + x^4 -x +5)^4 - 81x^20+19x^19eta_k i}} con $\theta_k = \frac{1}{5}k\pi \text{ con } k \en [0,4]$
+\boxed{z_k = 2 e^{\theta_k i}} con $\theta_k = \frac{1}{5}k\pi \text{ con } k \en [0,4]$
 
 
 %10
@@ -435,7 +435,7 @@ Si $w \en G_n \entonces
           $\re{\sumatoria{k=0}{60}w^k} = \frac{\sumatoria{k=0}{60}w^k +\sumatoria{k=0}{60}\conj w^k}{2} \stackrel{\llamada1}=
               \frac{w^0 + w^1 + w^2 + w^3 + w^4 + w^5 + \conj w^0 + \conj w^1 + \conj w^2 + \conj w^3 + \conj w^4 + \conj w^5}{2} =\\
               = \frac{w^0}{2} + \frac{\ob{w^1 + w^2 + w^3 + w^4 + w^5 + w^0 + w^{10} + w^9 + w^8 + w^7 + w^6}{\sumatoria{k=0}{10} w^k}}{2} =
-              \frac{\ob{w^0}{1}}{2} + \frac{\ob{\sumatoria{k=0}{10} w^k}{= 0}}{2} = \frac{1}{2}
+              \frac{\ob{\scriptstyle w^0}{1}}{2} + \frac{\ob{\scriptstyle\sumatoria{k=0}{10} w^k}{= 0}}{2} = \frac{1}{2}
 	      $
 \end{enumerate}
 
