--- a/7-guia/ejercicios-7/ej-14-7.tex
+++ b/7-guia/ejercicios-7/ej-14-7.tex
@@ -1,1 +1,6 @@
-\ejercicio\hacer
+\ejercicio
+\begin{enumerate}[label=\roman*)] 
+  \item Probar que si $w = e^{\frac{2\pi}{5}i} \en G_5$, entonces $X^2 + X -1 = [X - (w + w^{-1})] \cdot [X - (w^2 + w^{-2})].$
+
+  \item Calcula, justificando cuidadosamente, el valor exactor de $\cos(\frac{2\pi}{5})$
+ \end{enumerate}
