pagestyle -> preamble general

--- a/1-sol/1-sol.tex
+++ b/1-sol/1-sol.tex
@@ -6,15 +6,13 @@
 
 \begin{document}
 
-\pagestyle{empty} % Para que no muestre el número en pie de página
-
 % Info para armar título.
 \title{Práctica 1 de álgebra 1} % título
 % === Buscar forma más agradable de presentar a los que contribuyan
 \author{La comunidad algebraica} % autor
 
 \date{last update: \today} % Cambiar de ser necesario
-% \maketitle  % Para que aprezca el título en el documento
+\maketitle  % Para que aprezca el título en el documento
 
 % Archivo con notas teóricas
 \input{./teoria-1/teoria-1.tex}
