--- a/macros/preamble-general.tex
+++ b/macros/preamble-general.tex
@@ -24,6 +24,7 @@
 \usepackage{bbding} % símbolos de donde uso FiveStar
 \usepackage{skull} % símbolos de donde uso Skull
 \usepackage{soul} % Para tachar texto en text y math mode
+\usepackage{polynom} % para división de polinomios y mcd
 % \usepackage{lipsum} % dummy text
 
 % \usepackage{graphicx} % Necesario para poner imagenes
@@ -39,3 +40,6 @@
 % Definiciones y macros para que se me haga
 % más ameno el codeo.
 \input{../macros/definiciones.tex}
+
+% Para que no muestre el número en pie de página
+\pagestyle{empty} 
