add ejercicios de la 7

--- a/7-guia/7-sol.tex
+++ b/7-guia/7-sol.tex
@@ -16,12 +16,15 @@
 \newpage % página nueva
 
 %=========================
-% Ejercicios guia
+% Ejercicios extras
 %=========================
-\subsubsection*{Ejercicios de clase o parciales:}
+\subsubsection*{Ejercicios extras:}
+
+\foreach \x in {1,2} {
+		\input{./ejercicios-7-extra/ej-extra-\x-7.tex}
+	}
 
 \newpage % página nueva
-
 
 %=========================
 % Ejercicios guia
