--- a/7-guia/ejercicios-7/ej-16-7.tex
+++ b/7-guia/ejercicios-7/ej-16-7.tex
@@ -1,1 +1,25 @@
-\ejercicio\hacer
+\ejercicio
+Determinar la multiplicidad de $a$ como raíz de $f$  en los casos
+\begin{enumerate}[label=\roman*)] 
+ \item $f = X^5 - 2X^3 + X$,\quad $a=1$,\\ 
+ \item $f = X^6 - 3X^4 + 4$,\quad $a=i$,\\ 
+ \item $f = (X-2)^2(X^2-4) + (X-2)^3(X-1)$, \quad $a=2$,\\ 
+ \item $f = (X-2)^2(X^2-4) - 4(X-2)^3$, \quad $a=2$,\\ 
+ \end{enumerate}
+
+ \separadorCorto
+
+\begin{enumerate}[label=\roman*)] 
+ \item $f = X^5 - 2X^3 + X$,\quad $a=1$,\\ 
+   \hacer
+
+ \item $f = X^6 - 3X^4 + 4$,\quad $a=i$,\\ 
+   \divPol{X^6 - 3X^4 + 4}{X^2 + 1}
+   \hacer
+
+ \item $f = (X-2)^2(X^2-4) + (X-2)^3(X-1)$, \quad $a=2$,\\ 
+   \hacer
+
+ \item $f = (X-2)^2(X^2-4) - 4(X-2)^3$, \quad $a=2$,\\ 
+   \hacer
+ \end{enumerate}
